<resources>
    <string name="app_name">OrderFood</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="nhapmatkhau">Mật khẩu</string>
    <string name="nhapmatkhaumoi">Mật khẩu Mới</string>
    <string name="matkhaunhaplai">Mật Khẩu Nhập Lại</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="doisodienthoai">Đổi Số Điện Thoại</string>
    <string name="sodienthoai">Số Điện Thoại</string>
    <string name="gtNam">Nam</string>
    <string name="gtNu">Nữ</string>
    <string name="giotinh">Giớ Tính</string>
    <string name="chungminhandan">Chứng minh nhân dân</string>
    <string name="cmnd">CMND</string>
    <string name="dongy">Đồng ý</string>
    <string name="thaydoiquyen">Thay Đổi Quyền</string>
    <string name="thoat">Thoát</string>
    <string name="xacnhan">Xác Nhận</string>
    <string name="xacnhangaomom">Xác Nhận Giao Món cho Khách</string>
    <string name="xacnhanphucvu">Giao Món cho Khách</string>
    <string name="dangky">Đăng ký</string>
    <string name="loinhaptendangnhap">Vui lòng nhập tên đăng nhập !</string>
    <string name="doimatkhauthanhcong">Đổi Mật Khẩu Thành Cồng</string>
    <string name="doiemail">Đổi Email</string>
    <string name="doimatkhau">Đổi Mật Khẩu</string>
    <string name="loinhapmatkhau">Vui lòng nhập mật khẩu !</string>
    <string name="themthanhcong">Thêm thành công !</string>
    <string name="themthatbai">Thêm thất bại !</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="trangchu">Trang chủ</string>
    <string name="thucdon">Thực đơn</string>
    <string name="thongke">Thống kê</string>
    <string name="caidat">Cài đặt</string>
    <string name="mo">Mở</string>
    <string name="dong">Đóng</string>
    <string name="thembanan">Thêm bàn ăn</string>
    <string name="tenbanan">Tên bàn ăn</string>
    <string name="suamonan">Sữa Món Ăn</string>
    <string name="sualoaimonan">Sữa Loại Món Ăn</string>
    <string name="themthucdon">Thên thực đơn</string>
    <string name="tenmonan">Tên món ăn</string>
    <string name="nguoilap">Người Lập:</string>
    <string name="giatien">Giá tiền</string>
    <string name="chitietgoimon">Chi Tiết Gọi Món</string>
    <string name="banan">Bàn ăn</string>
    <string name="suabanan">Sữa Bàn ăn</string>
    <string name="loaithucdon">Loại thực đơn</string>
    <string name="tenloai">Tên loại</string>
    <string name="vuilongnhapdulieu">Vui lòng nhập dữ liệu !</string>
    <string name="loithemmonan">Vui lòng nhập đầy đủ thông tin !</string>
    <string name="gia">Giá : </string>
    <string name="soluong">Số lượng</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="xacnhanthanhtoan">Xác Nhận Thanh toán</string>
    <string name="tongcong">Tổng cộng : </string>
    <string name="thanhtoanthanhcong">Thanh toán thành công !</string>
    <string name="loi">Lỗi !</string>
    <string name="sua">Sữa</string>
    <string name="xoa">Xóa</string>
    <string name="loidangnhaplai">Lỗi Đăng Nhập Lại </string>
    <string name="xacnhanxoanhanvien">Xác Nhân Xóa nhân viên........</string>
    <string name="xacnhandoimatkhau">Xác Nhân Thay Đổi Mật Khẩu</string>
    <string name="xacnhandoidoisdt">Xác Nhân Thay Đổi Số Điện Thoại</string>
    <string name="xacnhandoidoiemail">Xác Nhân Thay Đổi Email</string>
    <string name="thaydoithanhcong">Thay Đổi Thành Công</string>
    <string name="xoanhanvien">Xóa nhân viên</string>
    <string name="xoathanhcong">Xóa thành công !</string>
    <string name="suathanhcong">Sữa thàng công !</string>
    <string name="themnhanvien">Thêm nhân viên !</string>
    <string name="chitietnhanvien">Chi Tiết nhân viên</string>
    <string name="dongydetieptuc">Đồng Ý Để Tiếp Tục...</string>
    <string name="resetgoimon">Thiết lập Lại Lần Gọi Món</string>
    <string name="resetgoimonthanhcong">Thiết lập Lại Lần Gọi Món Thành Công</string>
    <string name="capnhatnhanvien">Cập nhật nhân viên</string>
    <string name="topmonan">Top Món Ăn</string>
    <string name="xinchao">Xin Chào!</string>
    <string name="khachhang">Khách Hàng</string>
    <string name="nhabep">Nhà Bếp</string>
    <string name="quanly">Quản Lý</string>
    <string name="Quanly">Quản Lý</string>
    <string name="nhanvien">Nhân viên</string>
    <string name="dangxuat">Đăng Xuất</string>
    <string name="email">Email</string>
    <string name="hoten">Họ Và Tên</string>
    <string name="themthongtin">Thêm Thông Tin</string>
    <string name="thongbaochuahoanthanhmon">Món Ăn Chưa Hoàn Thành Không Thể Phục Vụ</string>
    <string name="phucvu">Phục Vụ</string>
    <string name="matkhaukhongtrung">Mật Khẩu Không Trùng Khớp</string>
    <string name="emailempty">Không Được Bỏ Trống Email</string>
    <string name="dangnhapthatbai">Đăng Nhập Thất Bại</string>
    <string name="quyen">Quyền:</string>
    <string name="vitri">Vị Trí</string>
    <string name="goimon">Thêm Gọi Món Thành Công</string>
    <string name="tongtien">Tổng Tiền</string>
    <string name="magoimon">Mã Gọi Món</string>
    <string name="ngaygoimon">Ngày Gọi</string>
    <string name="khongcoquyenthuchien">Không Có Quyền Thực Hiện</string>
    <string name="yeucauthanhtoan">Đăng Nhập Hoặc Yêu Cầu Nhân Viên Thanh Toán</string>
    <string name="bantrong">Bàn Trống!</string>
    <string name="thongbaoxacnhanthanhtoan">Thanh Toán Cho </string>
    <string name="hoanthanh">Hoàn Thành</string>
    <string name="langoi">Lần Gọi</string>
    <string name="khongduocdetrong">Không Được Để Trống</string>
    <string name="xacnhanxoaloai">Xác Nhận Xóa Loại Món Ăn!</string>
    <string name="thongbaoxoaloai">Sẽ Xóa Tất Cả Dữ liệu Liên Quan Đến Loại Món Ăn Này</string>
    <string name="xacnhanxoabanan">Xác Nhận Xóa Bàn Ăn!</string>
    <string name="thongbaoxoamonan">Sẽ Xóa Tất Cả Dữ liệu Liên Quan Đến Món Ăn Này</string>
    <string name="xacnhanxoamona">Xác Nhận Xóa Món Ăn!</string>
    <string name="thongbaoxoabanan">Sẽ Xóa Tất Cả Dữ liệu Liên Quan Đến Bàn Này</string>
    <string name="menu">Menu</string>
    <string name="menubanan">Menu Bàn Ăn</string>
    <string name="danhsachmondagoi">Danh Sách Gọi Món</string>
    <string name="nhaptenban">Nhập Tên Bàn</string>
</resources>
