<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundtransparentGreen"
        android:orientation="horizontal"
        android:padding="@dimen/size10dp"
        android:weightSum="7">

        <TextView
            android:id="@+id/txtMaGoiThongKe"
            android:layout_width="@dimen/size0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/magoimon"
            android:textSize="@dimen/size12sp"
            android:textColor="@color/colorOrgan"
            />

        <TextView
            android:id="@+id/txtNgayGoiThongKe"
            android:layout_width="0dp"
            android:textColor="@color/colorOrgan"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/ngaygoimon"/>

        <TextView
            android:id="@+id/txtTongTienThongKe"
            android:layout_width="@dimen/size0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOrgan"
            android:layout_weight="2"
            android:text="@string/tongtien"
            android:textSize="@dimen/size12sp"/>

    </LinearLayout>


</LinearLayout>