<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundDangNhap"
        android:orientation="horizontal"
        android:padding="@dimen/size5dp"
        android:weightSum="7">

        <TextView
            android:layout_width="@dimen/size0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/magoimon"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/ngaygoimon"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/size0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/tongtien"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ListView
        android:id="@+id/lvThongKeGoiMon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>
</LinearLayout>