<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundStart">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size30sp"
            android:text="@string/xinchao"
            android:textColor="@color/colorOrgan"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/size70dp"
            android:layout_marginLeft="@dimen/size70dp"/>

        <ImageView
            android:layout_width="@dimen/size150dp"
            android:layout_height="@dimen/size150dp"
            android:src="@drawable/logodangnhap"
            android:layout_marginTop="@dimen/size30dp"
            android:layout_marginLeft="@dimen/size10dp"
            />I
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btnKhachHang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size50dp"
            android:layout_marginTop="@dimen/size10dp"
            android:layout_marginRight="@dimen/size50dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/khachhang" />
        <Button
            android:id="@+id/btnNhanVien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size50dp"
            android:layout_marginTop="@dimen/size10dp"
            android:layout_marginRight="@dimen/size50dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/nhanvien" />
        <Button
            android:id="@+id/btnNhaBep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size50dp"
            android:layout_marginTop="@dimen/size10dp"
            android:layout_marginRight="@dimen/size50dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/nhabep" />
        <Button
            android:id="@+id/btnQuanLy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size50dp"
            android:layout_marginTop="@dimen/size10dp"
            android:layout_marginRight="@dimen/size50dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/Quanly" />
    </LinearLayout>

</LinearLayout>