<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreenTrans"
    >

    <LinearLayout
        android:background="@color/backgroundtransparentGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size10dp"
        android:orientation="horizontal"
        android:weightSum="4"
        >
        <TextView
            android:id="@+id/txtTenMonAnBep"
            android:layout_width="@dimen/size0dp"
            android:layout_height="wrap_content"
            android:text="@string/tenmonan"
            android:layout_weight="2"
            android:textSize="@dimen/size18sp"
            android:textColor="@color/colorBlack"

            />

        <TextView
            android:id="@+id/txtSoLuongBep"
            android:layout_width="@dimen/size0dp"
            android:layout_height="wrap_content"
            android:text="@string/soluong"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/size18sp"
            android:textColor="@color/colorBlack"
            />

        <TextView
            android:id="@+id/txtTenBanAnBep"
            android:layout_width="@dimen/size0dp"
            android:layout_height="wrap_content"
            android:text="@string/banan"
            android:layout_weight="1"
            android:textSize="@dimen/size18sp"
            android:textColor="@color/colorBlack"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/size5dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hoanthanh"
                android:textColor="@color/backgroundToolbar"
                android:textSize="@dimen/size18sp"/>
            <CheckBox
                android:id="@+id/cbHoanThanhBep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/backgroundToolbar"
                android:layout_marginLeft="@dimen/size5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/size5dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phucvu"
                android:textColor="@color/backgroundToolbar"
                android:textSize="@dimen/size18sp"/>
            <CheckBox
                android:id="@+id/cbPhucVuBep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/backgroundToolbar"
                android:layout_marginLeft="@dimen/size5dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>