<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:background="@color/backgroundtransparentGreen"
        android:orientation="horizontal">


        <TextView
            android:layout_width="@dimen/size0dp"
            android:layout_height="wrap_content"
            android:text="@string/nguoilap"
            android:layout_margin="@dimen/size5dp"
            android:textColor="@color/colorBlack"
            android:layout_weight="1"
            android:padding="@dimen/size5dp"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txtNguoiLapTK"
            android:layout_width="@dimen/size0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size5dp"
            android:textColor="@color/colorBlack"
            android:layout_weight="2"
            android:padding="@dimen/size5dp"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size10dp"
        android:background="@color/backgroundDangNhap"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenmonan"
            android:layout_weight="1"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soluong"
            android:layout_weight="1"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/giatien"
            android:layout_weight="1"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold"
            />

    </LinearLayout>
    <ListView
        android:id="@+id/lvThongKeChiTietGoiMon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>