<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/txtTenNhanVienCT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="tên"
        android:textColor="@color/colorRed"
        android:drawableLeft="@drawable/nhanvien"
        android:textSize="@dimen/size28sp"
        android:padding="@dimen/size5dp"
        android:layout_margin="@dimen/size5dp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/size100dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorOrgan"
            android:textSize="@dimen/size18sp"
            android:padding="@dimen/size5dp"
            android:layout_margin="@dimen/size5dp"
            />
        <TextView
            android:id="@+id/txtEmailCT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorOrgan"
            android:textSize="@dimen/size18sp"
            android:padding="@dimen/size5dp"
            android:layout_margin="@dimen/size5dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/size100dp"
            android:layout_height="wrap_content"
            android:text="@string/sodienthoai"
            android:textColor="@color/colorOrgan"
            android:textSize="@dimen/size18sp"
            android:padding="@dimen/size5dp"
            android:layout_margin="@dimen/size5dp"
            />
        <TextView
            android:id="@+id/txtSDTCT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorOrgan"
            android:textSize="@dimen/size18sp"
            android:padding="@dimen/size5dp"
            android:layout_margin="@dimen/size5dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/size100dp"
            android:layout_height="wrap_content"
            android:text="@string/vitri"
            android:textColor="@color/colorOrgan"
            android:textSize="@dimen/size18sp"
            android:padding="@dimen/size5dp"
            android:layout_margin="@dimen/size5dp"
            />
        <TextView
            android:id="@+id/txtQuyenCT"
            android:layout_width="@dimen/size80dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorOrgan"
            android:textSize="@dimen/size18sp"
            android:padding="@dimen/size5dp"
            android:layout_margin="@dimen/size5dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/size100dp"
            android:layout_height="wrap_content"
            android:text="@string/ngaysinh"
            android:textColor="@color/colorOrgan"
            android:textSize="@dimen/size18sp"
            android:padding="@dimen/size5dp"
            android:layout_margin="@dimen/size5dp"
            />
        <TextView
            android:id="@+id/txtNgaySinhCT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorOrgan"
            android:textSize="@dimen/size18sp"
            android:padding="@dimen/size5dp"
            android:layout_margin="@dimen/size5dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/size100dp"
            android:layout_height="wrap_content"
            android:text="@string/giotinh"
            android:textColor="@color/colorOrgan"
            android:textSize="@dimen/size18sp"
            android:padding="@dimen/size5dp"
            android:layout_margin="@dimen/size5dp"
            />
        <TextView
            android:id="@+id/txtGioiTinhCT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/giotinh"
            android:textColor="@color/colorOrgan"
            android:textSize="@dimen/size18sp"
            android:padding="@dimen/size5dp"
            android:layout_margin="@dimen/size5dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/size100dp"
            android:layout_height="wrap_content"
            android:text="@string/cmnd"
            android:textColor="@color/colorOrgan"
            android:textSize="@dimen/size18sp"
            android:padding="@dimen/size5dp"
            android:layout_margin="@dimen/size5dp"
            />
        <TextView
            android:id="@+id/txtCMNDCT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/giotinh"
            android:textColor="@color/colorOrgan"
            android:textSize="@dimen/size18sp"
            android:padding="@dimen/size5dp"
            android:layout_margin="@dimen/size5dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size40dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnThoatCT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/size5dp"
            android:layout_margin="@dimen/size5dp"
            android:text="@string/thoat"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnXoaNhanVienCT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/size5dp"
            android:layout_margin="@dimen/size5dp"
            android:text="@string/xoanhanvien"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>